@@ -1,5 +1,11 @@
 2007-11-08  Mathias Hasselmann  <mathias@openismus.com>
 
+	Always dump the test cases' stdout and stderr when EPC_DEBUG is set.
+
+	* tests/test-runner.sh: Consider EPC_DEBUG variable.
+
+2007-11-08  Mathias Hasselmann  <mathias@openismus.com>
+
 	Pass arguments to make when building API documentation.
 
 	* Makefile.am: Pass arguments to make when building API documentation.
